<resources>
    <string name="app_name">Clean MVVM</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="reset_password">Reset password</string>
    <string name="first_privacy_label">Para poder continuar debe aceptar la</string>
    <string name="privacy_policy">Política de Privacidad</string>
    <string name="and">y</string>
    <string name="terms_and_conditions">Términos y condiciones</string>
    <string name="second_privacy_label">de Ortudev</string>
    <string name="recovery_code">Código de recuperación</string>
    <string name="continue_key">Continuar</string>
    <string name="maintenance">Mantenimiento</string>
    <string name="update">Actualizar</string>
    <string name="maintenance_message">En estos momentos estamos realizando tareas de mantenimiento en el servidor. \n\nPor favor, inténtelo de nuevo más tarde.</string>
    <string name="update_message">Hay una nueva versión disponible de la aplicación en Play Store. Para poder continuar utilizándola con normalidad, deberás actualizar a esta nueva versión.</string>
    <string name="close_app">Cerrar aplicación</string>
    <string name="close">Cerrar</string>



    <string name="nav_header_title">Document Reader</string>
    <string name="nav_header_subtitle">The best reader</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_library">Library</string>
    <string name="menu_reader">Reader</string>

    <string name="document_preview">Document preview</string>
    <string name="bookmark">Bookmark</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="page_navigation_format">Page: %1$d / %2$d</string>
    <string name="page_bookmark_format">Page %1$d</string>
    <string name="bookmarks">Bookmarks</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>